# distributed-map-reduce

./: .gitignore  Cargo.toml  README.md  file2.txt
samples/: file1.txt
src/: coordinator.rs  coordinator_node.rs  lib.rs  worker.rs  worker_node.rs
